{{$NEXT}}

    - [RT #134957] Fix encoding of \n in a PDF string containing non-printable
      characters (reported by Stuart Henderson).

    - [RT #133131] Fix endianness of 64-bit numbers in cross-reference stream
      widths array (reported by Christopher Papademetrious, fix by Vadim Repin).


2.039     2021-03-04

    - PDF::API2->open($filename) no longer reads the entire file into memory
      before working on it, instead reading from the file as needed.  This
      results in a substantial reduction in memory usage and start-up time for
      large PDF files, particularly in cases where the calling script doesn't
      need to access all of the contents of the PDF.

    - PDF files containing cross-reference streams can now be modified and saved
      normally.  Previously, they were read-only.

    - $text->paragraph(...) and $text->paragraphs(...) (formerly "section") are
      no longer undocumented and experimental.  If you were previously using
      them at your own risk, note that "-spillover" is no longer an option (text
      will always wrap inside the specified width if possible).  In addition,
      paragraphs(...) no longer collapses consecutive newlines.

    - [RT #98546] There is now an -align-last option for justified text to
      specify how the final line should be justified.  Left is still the
      default.

    - Code in the PDF::API2::Basic::PDF namespace was originally licensed under
      the Perl Artistic License, which has been determined to not be
      (L)GPL-compatible.  Martin Hosken has graciously granted an MIT license
      for use of his code contained in PDF::API2, so the distribution may now be
      used solely under the terms of the LGPL rather than requiring both
      licenses simultaneously.  Many thanks to Petr Pisar for his help in
      working through the licensing issues.

    - Renamed $text->lead(...) to $text->leading(...).  The old name is