@@ -1,5 +1,8 @@
 {{$NEXT}}
 
+    - Fix open() followed by stringify() resulting in a corrupt (mostly-empty)
+      PDF, which was broken by changes in 2.039 (reported by Gareth Tunley).
+
     - [RT #134957] Fix encoding of \n in a PDF string containing non-printable
       characters (reported by Stuart Henderson).
 
